# TP_POO

trabalho_POO/: Buffer.cpp  Buffer.h  CMakeLists.txt  main.cpp  simulador.cpp  simulador.h
trabalho_POO/Caravanas/: caravanaComercial.cpp  caravanaComercial.h  caravanaMilitar.cpp  caravanaMilitar.h  caravanaSecreta.cpp  caravanaSecreta.h  caravanas.cpp  caravanas.h
